# desktop-mascot

./: .gitignore  LICENSE  README.md  chat.html  design.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
public/: cat.json
src/: chat.css  chat.ts  main.ts  settings.css  settings.ts  styles.css
src-tauri/: Cargo.toml  behavior.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
