[package]
name = "desktop-mascot"
version = "0.1.0"
description = "A cross-platform desktop AI mascot"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_mascot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

